# TP-IR

./: .cproject  .gitignore  .project  CMakeLists.txt  README.md  REMOVEHTML.txt  index-term-document.csv  index-term-document.ods  index-term-document.xlsx  index.cpp  ir.cpp  searcher.cpp  server.cpp
Debug/: file.index  ir  makefile  sources.mk
Debug/src/: ir.d  subdir.mk
Debug/src/index/: Dictionary.d  IndexDocument.d  Indexer.d  subdir.mk
Debug/src/libs/htmlcxx/css/: css_lex.d  css_syntax.d  parser.d  parser_pp.d  subdir.mk
Debug/src/libs/htmlcxx/html/: CharsetConverter.d  Uri.d  (+6 more)
Debug/src/libs/reader/: CollectionReader.d  Document.d  subdir.mk
Debug/src/libs/zlib/: adler32.d  compress.d  crc32.d  deflate.d  gzclose.d  gzlib.d  gzread.d  gzwrite.d  infback.d  inffast.d  inflate.d  inftrees.d  subdir.mk  trees.d  uncompr.d  zutil.d
Debug/src/parser/: TextParser.d  subdir.mk
Debug/src/search/: Searcher.d  subdir.mk
Debug/src/util/: SortFile.d  subdir.mk
documents/: consultas.txt
documents/relevantes-34/: ana maria braga  baixaki  caixa economica federal  casa e video  claro  concursos  detran  esporte  frases de amor  funk  globo  gmail  google  hotmail  ig  jogos de meninas  jogos online  mario  mercado livre  msn  naruto  oi  orkut  panico  poquer  previsao do tempo  receita federal  record  rio de janeiro  terra  uol  vivo  yahoo  youtube
objetos/: report.tex  sbc-template.bib  sbc-template.tex
src/: CMakeLists.txt  ir.cpp
src/index/: CMakeLists.txt  Dictionary.cpp  Dictionary.h  IndexDocument.cpp  IndexDocument.h  IndexTerm.h  Indexer.cpp  Indexer.h  Term.h
src/libs/: CMakeLists.txt
src/libs/gumbo/: attribute.d  char_ref.d  error.d  parser.d  string_buffer.d  string_piece.d  subdir.mk  tag.d  tokenizer.d  utf8.d  util.d  vector.d
src/libs/gumbo/.libs/: subdir.mk
src/libs/htmlcxx/css/: parser_pp.cc
src/libs/htmlcxx/html/: tree.h
src/libs/reader/: CMakeLists.txt  CollectionReader.cpp  Document.h
src/parser/: CMakeLists.txt  TextParser.cpp  TextParser.h
src/search/: CMakeLists.txt  PageRank.cpp  PageRank.h  Query.cpp  Query.h  Search.cpp  Search.h  Searcher.cpp  Searcher.h  VectorModelSpace.cpp  VectorModelSpace.h
src/util/: CMakeLists.txt  FileHelper.cpp  SortFile.cpp  SortFile.h  StringHelper.cpp  StringHelper.h  WriterHelper.h
src/webserver/: CMakeLists.txt
src/www/: index.html
src/www/css/: stylish-portfolio.css
src/www/js/: jquery.endless-scroll.js
